# flow-matching

./: .gitignore  data.py  eval.py  flow.py  generate.py  mean_flow.py  modules.py  pyproject.toml  solver.py  train.py
configs/: dit_mnist large.yaml  dit_mnist.yaml  dit_mnist_large.yaml  dit_mnist_xl.yaml  unet_mnist.yaml  unet_mnist_base.yaml  unet_mnist_base_mf.yaml  unet_mnist_large.yaml  unet_mnist_large_mf.yaml  unet_mnist_large_v2.yaml  unet_mnist_large_v3.yaml
models/: dit.py  modules.py  unet.py
results/: unet_mnist_large_mf_epoch_71.json  unet_mnist_large_v3_epoch_600.json
