[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytorch-fid>=0.3.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.1",
    "torch-fidelity>=0.4.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
]
